--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 <div class="u3">4</div>
 <div class="u3">7</div> -->
 
+<span class='task-4' data='20'></span>
+<span class='task-4' data='30'></span>
+<span class='task-4' data='40'></span>
 </body>
 
 </html>
