урок 19 задачи решены до 7

--- a/index.html
+++ b/index.html
@@ -73,9 +73,31 @@
 <div class="u3">4</div>
 <div class="u3">7</div> -->
 
-<span class='task-4' data='20'></span>
+
+<!-- Ниже spanы для урока 18 foreach -->
+<!-- <span class='task-4' data='20'></span>
 <span class='task-4' data='30'></span>
-<span class='task-4' data='40'></span>
+<span class='task-4' data='40'></span> -->
+
+<!-- Ниже Div для урока 19 события мыши -->
+<div class="div-1"></div>
+
+
+<!-- урок 6 урока 19 выпадающее меню -->
+<div class="div-2 active">
+    <ul class="see hide">
+        <li>11</li>
+        <li>22</li>
+        <li>33</li>
+        <li>44</li>
+        <li>55</li>
+        <li>66</li>
+    </ul>
+    <!-- ---------------------- -->
+
+
+</div>
+
 </body>
 
 </html>
