Уроки с событиями мыши 7 урок решен

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 <!-- урок 6 урока 19 выпадающее меню -->
-<div class="div-2 active">
+<!-- <div class="div-2 active">
     <ul class="see hide">
         <li>11</li>
         <li>22</li>
@@ -92,8 +92,8 @@
         <li>44</li>
         <li>55</li>
         <li>66</li>
-    </ul>
-    <!-- ---------------------- -->
+    </ul> -->
+<!-- ---------------------- -->
 
 
 </div>
