--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <input type="text" class="curensy"> Введите сумму в долларах -->
 <!-- <button class="u-9" class="active" data="200">push</button>
 <button class="u-9" class="active" data="300">push</button> -->
-<div class="out"></div>
+<!-- <div class="out"></div> -->
 <!-- <input type="number"> -->
 <!-- <input type="number">
 
@@ -53,9 +53,9 @@
 <p class="css-3">Hello</p>
 <p class="css-3">Hello</p> -->
 
-<input type="text" class='u7Key'> Введите текст
+<!-- <input type="text" class='u7Key'> Введите текст -->
 <!-- <input type="text" class="u7Value"> Введите количество -->
-<button id="push_2">Добавить</button>
+<!-- <button id="push_2">Добавить</button> -->
 <!-- <button class="push_4">Удалить Проверить</button> -->
 <!-- <button class="push_3">Array</button> -->
 
@@ -80,7 +80,8 @@
 <span class='task-4' data='40'></span> -->
 
 <!-- Ниже Div для урока 19 события мыши -->
-<div class="div-1"></div>
+<!-- <div class="div-1">
+</div> -->
 
 
 <!-- урок 6 урока 19 выпадающее меню -->
@@ -93,10 +94,59 @@
         <li>55</li>
         <li>66</li>
     </ul> -->
+<!-- </div> -->
 <!-- ---------------------- -->
 
 
-</div>
+<!-- урок 19 события мыши урок 8-->
+<!-- <div class="div-1">
+        <input type="checkbox" name="eventMouse" class="ch-8" checked>
+        <label for="ch-8"> 1 чекбокс </label>
+        <input type="checkbox" name="eventMouse" class="ch-9 ch-8">
+        <label for="ch-9"> 2 чекбокс </label>
+        <input type="checkbox" name="eventMouse" class="ch-10 ch-8">
+        <label for="ch-10"> 3 чекбокс </label>
+    </div> -->
+
+
+<!--  урока 19 события мыши -задача 9 и 10->
+    <div class="div-1">
+        <img src="D:/картинки и живопись/ОБОИ/ulitka.jpg" alt="картинка улитки" width="1920" height="1080">
+    </div>
+    ------->
+
+
+
+
+
+<!-- урок 20 задача 1 События клавиатуры -->
+<div class="out"></div>
+<label><input type="text" class="input-1">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 2 События клавиатуры -->
+<div class="out-2"></div>
+<label><input type="text" class="input-2">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 3 События клавиатуры -->
+<div class="out-3"></div>
+<label><input type="text" class="input-3">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 4 События клавиатуры -->
+<div class="out-4"></div>
+<label><input type="text" class="input-4">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 5 События клавиатуры -->
+<div class="out-5"></div>
+<label><input type="text" class="input-5">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 6 События клавиатуры -->
+<div class="out-6"></div>
+<label><input type="text" class="input-6">Нажмите кнопку клавиатуры </label>
+
+<!-- урок 20 задача 7 События клавиатуры -->
+<div class="out-7"></div>
+<label><input type="text" class="input-7">Нажмите кнопку клавиатуры </label>
+
 
 </body>
 
