решенные задачи урока 20 (события клавиатуры) с 1 по 6

--- a/index.html
+++ b/index.html
@@ -119,33 +119,36 @@
 
 
 
-<!-- урок 20 задача 1 События клавиатуры -->
+<!-- урок 20 задача 1 События клавиатуры
 <div class="out"></div>
-<label><input type="text" class="input-1">Нажмите кнопку клавиатуры </label>
+<label><input type="text" class="input-1">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 2 События клавиатуры -->
-<div class="out-2"></div>
-<label><input type="text" class="input-2">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-2"></div>
+<label><input type="text" class="input-2">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 3 События клавиатуры -->
-<div class="out-3"></div>
-<label><input type="text" class="input-3">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-3"></div>
+<label><input type="text" class="input-3">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 4 События клавиатуры -->
-<div class="out-4"></div>
-<label><input type="text" class="input-4">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-4"></div>
+<label><input type="text" class="input-4">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 5 События клавиатуры -->
-<div class="out-5"></div>
-<label><input type="text" class="input-5">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-5"></div>
+<label><input type="text" class="input-5">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 6 События клавиатуры -->
-<div class="out-6"></div>
-<label><input type="text" class="input-6">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-6"></div>
+<label><input type="text" class="input-6">Нажмите кнопку клавиатуры </label> -->
 
 <!-- урок 20 задача 7 События клавиатуры -->
-<div class="out-7"></div>
-<label><input type="text" class="input-7">Нажмите кнопку клавиатуры </label>
+<!-- <div class="out-7"></div>
+<label><input type="text" class="input-7">Нажмите кнопку клавиатуры </label> -->
+
+<!-- урок 20 задача 11 (ПРОЕКТ) События клавиатуры -->
+
 
 
 </body>
