--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
 <!-- <div class="out-7"></div>
 <label><input type="text" class="input-7">Нажмите кнопку клавиатуры </label> -->
 
+<!-- урок 20 задача 8 События клавиатуры -->
+<!-- <div class="out-7"></div>
+    <label><input type="text" class="input-7">Нажмите кнопку клавиатуры </label> -->
+
+<!-- урок 20 задача 9 События клавиатуры -->
+<div class="out-9"></div>
+<label><input type="text" class="input-9">Нажмите кнопку клавиатуры </label>
+
 <!-- урок 20 задача 11 (ПРОЕКТ) События клавиатуры -->
 
 
